--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ click==7.1.1
 data==0.4
 DBUtils==1.3
 decorator==4.4.2
+dj-database-url==0.5.0
 Django==3.0.5
 django-crispy-forms==1.9.0
 django-extensions==2.2.9
 django-filter==2.2.0
+django-heroku==0.3.1
 Flask==1.1.2
 funcsigs==1.0.2
 gunicorn==20.0.4
@@ -17,8 +19,10 @@ Jinja2==2.11.1
 legacy==0.1.6
 MarkupSafe==1.1.1
 Pillow==7.1.1
+psycopg2==2.8.5
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.1
 views==0.3
 Werkzeug==1.0.1
+whitenoise==5.0.1
